some fixes for blurry assets

--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,6 @@ body {
 
 #root {
   height: 100%;
-  background-color: #5c7cbe;
 }
 
 .App {
