--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -24,7 +24,7 @@
 }
 
 #headerlogo {
-  width: 380px;
+  width: 360px;
   margin: 10px;
 }
 
