--- a/src/components/Plate.css
+++ b/src/components/Plate.css
@@ -131,14 +131,14 @@
 }
 
 .gotoplatebutton {
-  width: 200px;
+  width: 253px;
   background-color: transparent;
   border: none;
   margin: 20px 0 20px auto;
 }
 
 .backbutton {
-  width: 100px;
+  width: 117px;
   background-color: transparent;
   border: none;
   margin: 20px auto 20px 0;
